Ensure InfoBarManager is moved when preload tab is set as current tab.

BUG=717609

Review-Url: https://codereview.chromium.org/2868433003
Cr-Commit-Position: refs/heads/master@{#470436}

Former-commit-id: 79909fbb894fa48c8a45a4de6079812668ee2da1